Fixed a bug where action-items in git-viewlet changes-view was vertically misaligned. Issue #2642.

--- a/src/vs/workbench/parts/git/browser/views/changes/changesView.css
+++ b/src/vs/workbench/parts/git/browser/views/changes/changesView.css
@@ -41,7 +41,7 @@
 }
 
 .git-viewlet > .changes-view > .status-view > .monaco-tree .monaco-tree-row .content .monaco-action-bar .action-item {
-	vertical-align: middle;
+	padding-top:4px;
 }
 
 .git-viewlet > .changes-view > .status-view > .monaco-tree .monaco-tree-row .content .monaco-action-bar .action-label {
